welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if (!estFaceMur()){avance(); if (getCouleurSol()==Color.green) {recule(); return(true)}}
                               ^